GH page update 4

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "homepage": "https://caalke.github.io/portfolio"
+    "homepage": "https://caalke.github.io/Portfolio"
   },
   "eslintConfig": {
     "extends": [
