--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://caalke.github.io/Portfolio",
   "name": "portfoio",
   "version": "0.1.0",
   "private": true,
@@ -27,8 +28,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "homepage": "https://caalke.github.io/Portfolio"
+    "deploy": "gh-pages -d build"
+    
   },
   "eslintConfig": {
     "extends": [
